# dpdk

./: .gitmodules  COPYRIGHT  NOTES.txt  README.md
workspace/dpdk/: Cargo.toml  README.md
workspace/dpdk-core/: Cargo.toml
workspace/dpdk-core/src/: AllLogicalCoreIterator.rs  BusyPollBehaviour.rs  BusyPollingLogicalCoreFunction.rs  ConstCStr.rs  DeviceName.rs  DpdkAllocatedMemory.rs  DpdkProcess.rs  EssentialKernelModule.rs  EssentialKernelModulesToUnload.rs  HardwareOffloadPacketType.rs  HugePageAllocationStrategy.rs  KiloBytes.rs  LogicalCore.rs  LogicalCoreChoice.rs  MachineOrNumaNodes.rs  MegaBytes.rs  Memory.rs  NumaNode.rs  NumaNodeChoice.rs  PacketBufferPool.rs  PerMyriad.rs  PointerExt.rs  Service.rs  ServiceFunction.rs  ShouldFunctionTerminate.rs  SlaveLogicalCoreFunction.rs  SlaveLogicalCoreIterator.rs  SysLog.rs  VirtualFunctionIoInterruptMode.rs  lib.cfg.rs  lib.rs
workspace/dpdk-core/src/E_RTE/: NO_CONFIG.rs  SECONDARY.rs
workspace/dpdk-core/src/memory/: InputOutputVirtualAddress.rs  MemoryChannels.rs  MemoryRanks.rs  mod.rs
workspace/dpdk-core/src/power/: LogicalCorePowerManagement.rs  PowerManagement.rs  mod.rs
workspace/dpdk-core/src/print_information/: Adaptor.rs  PrintAllInformation.rs  PrintInformation.rs  mod.rs
workspace/dpdk-core/src/receive_side_scaling/: ReceiveSideScalingToeplitzHashFunctionKeyData40Bytes.rs  ReceiveSideScalingToeplitzHashFunctionKeyData52Bytes.rs  ReceiveSideScalingToeplitzHashFunctionKeyDataStrategy.rs  mod.rs
workspace/dpdk-flow/: Cargo.toml
workspace/dpdk-flow/src/: ActiveFlowRule.rs  AddressResolutionProtocolForInternetProtocolVersion4OverEthernetMask.rs  AddressResolutionProtocolForInternetProtocolVersion4OverEthernetSpecification.rs  EthernetAddress.rs  EthernetAddressesMask.rs  EthernetHeaderMask.rs  EthernetHeaderSpecification.rs  FlowActions.rs  FlowRule.rs  FlowRulePriorityGroup.rs  InternetControlMessageProtocolVersion4HeaderMask.rs  InternetControlMessageProtocolVersion4HeaderSpecification.rs  InternetControlMessageProtocolVersion6HeaderMask.rs  InternetControlMessageProtocolVersion6HeaderSpecification.rs  InternetControlMessageProtocolVersion6NeighborDiscoveryOptionSpecification.rs  InternetControlMessageProtocolVersion6NeighborDiscoverySolicitationMask.rs  InternetProtocolVersion4HeaderMask.rs  InternetProtocolVersion4HeaderSpecification.rs  InternetProtocolVersion6HeaderMask.rs  InternetProtocolVersion6HeaderSpecification.rs  Mask.rs  MaskedPacketMatcher.rs  MaskedPacketMatcherFields.rs  MediaAccessControlAddressMask.rs  Pattern.rs  PatternItem.rs  Raw.rs  RawSpecification.rs  Specification.rs  TrafficDirection.rs  VirtualLanHeaderMask.rs  VirtualLanHeaderSpecification.rs  bitwise_clone.rs  bitwise_clone_partial_ord_ord_partial_eq_eq_hash.rs  custom_deserialize.rs  generic_clone.rs  generic_compare.rs  generic_equals.rs  generic_hash.rs  lib.cfg.rs  (+1 more)
workspace/dpdk-layers/: Cargo.toml
workspace/dpdk-layers/src/: AddressResolutionProtocolPacketProcessing.rs  Configuration.rs  EthernetPacketProcessing.rs  InternetChecksum.rs  InternetProtocolVersion4PacketProcessing.rs  InternetProtocolVersion6PacketHeaderProcessing.rs  InternetProtocolVersion6PacketProcessing.rs  Layer3PacketProcessing.rs  NetworkByteOrderEndianU16.rs  NonNullUnifiedArrayVecAndVec.rs  Packet.rs  PacketBuffer.rs  PacketBufferPool.rs  PacketProcessingConfiguration.rs  PacketProcessingDropReason.rs  UnifiedArrayVecAndVec.rs  drop.rs  lib.cfg.rs  lib.rs  unsupported.rs
workspace/dpdk-likely/: Cargo.toml  rustfmt.toml
workspace/dpdk-likely/src/: lib.rs  likely.rs  unlikely.rs
workspace/dpdk-main/: Cargo.toml  README.md  check-x86_64-unknown-linux-musl  x86_64-unknown-linux-musl-haswell.json  x86_64-unknown-linux-musl-sandybridge.json  x86_64-unknown-linux-musl-silvermont.json  x86_64-unknown-linux-musl-skylake-avx512.json  x86_64-unknown-linux-musl-skylake.json
workspace/dpdk-main/src/: ALLOCATOR.rs  DpdkRteInitData.rs  LinuxKernelModule.rs  MainLogic.rs  Networking.rs  ParsedCommandLineArguments.rs  authors.rs  lib.rs  main.cfg.rs  main.rs  print_version.rs
workspace/dpdk-packet-reorderer/: Cargo.toml
workspace/dpdk-packet-reorderer/src/: CouldNotInsertPacketBufferForReordering.rs  PacketReorderer.rs  lib.cfg.rs  lib.rs
workspace/dpdk-serde/: .gitignore  Cargo.toml  README.md  clippy.toml
workspace/dpdk-serde/src/: OrderedSet.rs  lib.rs  serde_pub_enum_u16.rs  serde_pub_enum_u8.rs
workspace/dpdk-sys/: .tm_properties  COPYRIGHT  Cargo.toml  LICENSE  README.md
workspace/dpdk-sys/bindgen-wrapper.conf.d/: bitfield-enum.regex  configuration.sh  constant.mapping  constant.types  constified-enum-module.regex.rs  function.mapping  post-includes.rs  remove-equality-derives-from-structs  rte_mbuf.fragment.rs  rustified-enum.regex  static.mapping  suppress-debug-warnings  unnamed-enum.mapping  whitelist-function.regex  whitelist-type.regex  whitelist-var.regex
workspace/dpdk-sys/compile.conf.d/: .gitignore  compile.configuration.sh
workspace/dpdk-sys/src/: build.rs  lib.c  lib.h  lib.rs
workspace/dpdk-unix/: Cargo.toml  README.md  X.rs
workspace/dpdk-unix/src/: Daemonize.rs  DaemonizeCleanUpOnExit.rs  DevPath.rs  DisableTransparentHugePagesError.rs  HugePageSize.rs  HyperThread.rs  HyperThreadBitmask.rs  InterruptRequest.rs  ListParseError.rs  NumaNode.rs  PathExt.rs  ProcPath.rs  ProcessCommonConfiguration.rs  SetCurrentThreadNameError.rs  StatusStatistic.rs  SysPath.rs  VirtualMemoryStatisticName.rs  assert_effective_user_id_is_root.rs  get_program_name.rs  lib.rs  page_size.rs  set_current_thread_name.rs
workspace/dpdk-virtual-devices/: Cargo.toml
workspace/dpdk-virtual-devices/src/: VirtualDevice.rs  VirtualDeviceIndex.rs  VirtualDeviceName.rs  lib.cfg.rs  lib.rs
workspace/dpdk/src/: AllLogicalCoreIterator.rs  BusyPollImplementation.rs  EthernetPort.rs  HyperThread.rs  LogicalCore.rs  LogicalCoreChoice.rs  MachineOrNumaNodes.rs  NumaNode.rs  NumaNodeChoice.rs  PacketTypeMask.rs  PointerExt.rs  Service.rs  ServiceFunction.rs  ShouldFunctionTerminate.rs  ShouldTerminate.rs  SlaveLogicalCoreIterator.rs  lib.cfg.rs  lib.rs
(+2969 files in other folders)
