# This file is part of dpdk. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/dpdk/master/COPYRIGHT. No part of dpdk, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016-2017 The developers of dpdk. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/dpdk/master/COPYRIGHT.


[package]
name = "dpdk-core"
description = "A wrapper around DPDK's core framework"
keywords = ["DPDK", "TLDK", "TCP", "UDP", "Networking"]
categories = []
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/dpdk"
repository = "https://github.com/lemonrock/dpdk.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.0.6"

[target.'cfg(any(all(any(target_os = "android", target_os = "linux"), any(target_arch = "aarch64", target_arch = "arm", target_arch = "powerpc64", target_arch = "x86", target_arch = "x86_64")), all(target_os = "freebsd", target_arch = "x86_64")))'.dependencies]
arrayvec = "^0.4"
const-cstr-fork = "^0.2"
dpdk-sys = { path = "../dpdk-sys", version = "0.0.6" }
dpdk-unix = { path = "../dpdk-unix", version = "0.0.6" }
indexmap = "^1.0"
lazy_static = "^1.0"
libc = "^0.2"
libc-extra = "^0.3"
libnuma-sys = "0.0.9"
likely = "0.1"
serde = "1.0"
serde_derive = "1.0"
syscall-alt = "0.0.14"
