# This file is part of dpdk. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/dpdk/master/COPYRIGHT. No part of dpdk, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016-2017 The developers of dpdk. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/dpdk/master/COPYRIGHT.


[package]
name = "dpdk-layers"
description = "Ethernet and Internet layers 2, 3 and 4 based on DPDK"
keywords = ["DPDK", "TLDK", "TCP", "UDP", "Networking"]
categories = []
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/dpdk"
repository = "https://github.com/lemonrock/dpdk.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.0.6"

[target.'cfg(any(all(any(target_os = "android", target_os = "linux"), any(target_arch = "aarch64", target_arch = "arm", target_arch = "powerpc64", target_arch = "x86", target_arch = "x86_64")), all(target_os = "freebsd", target_arch = "x86_64")))'.dependencies]
arrayref = "^0.3"
arrayvec = "^0.4"
dpdk-core = { path = "../dpdk-core", version = "0.0.6" }
dpdk-likely = { path = "../dpdk-likely", version = "0.0.6" }
dpdk-sys = { path = "../dpdk-sys", version = "0.0.6" }
dpdk-time = { path = "../dpdk-time", version = "0.0.6" }
dpdk-unix = { path = "../dpdk-unix", version = "0.0.6" }
hyper-thread-random = "^0.4"
libc = "^0.2"
serde = "1.0"
serde_derive = "1.0"
syscall-alt = "0.0.14"
# TODO: Suspended as upstream crate needs changes.
#treebitmap = "^0.3"


[features]
default = ["drop-packets-with-ipv4-options", "drop-ipv4-packets-with-do-not-fragment-and-non-zero-identification"]

# Drops internet protocol (IP) version 4 packets with IP options.
#
# Enabled by default.
#
# Violates RFC 791 but IP options are very rarely used, the few that are used have potential to be used as attack vectors and none have any meaning to this library.
drop-packets-with-ipv4-options = []

# Drops internet protocol (IP) version 4 packets with the Do Not Fragment (DF) flag set and a non-zero (fragment) identification.
#
# Enabled by default.
#
# Violates RFC 6864 section 4.1 paragraph 5 but there is no good reason to send IP packets with DF set and a non-zero (fragment) identification.
# In particular, the identification field in these cases can be used as a covert channel and to infer the number of devices behind a NAT proxy.
drop-ipv4-packets-with-do-not-fragment-and-non-zero-identification = []
