# This file is part of dpdk. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/dpdk/master/COPYRIGHT. No part of dpdk, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016-2017 The developers of dpdk. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/dpdk/master/COPYRIGHT.


[package]
name = "dpdk-main"
description = "A wrapper around DPDK"
keywords = ["DPDK", "TLDK", "TCP", "UDP", "Networking"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/dpdk"
repository = "https://github.com/lemonrock/dpdk.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"

[dependencies]
arrayvec = { version = "0.3", features = ["std", "use_union", "serde-1"] }
const-cstr-fork = "^0.2"
docopt = "0.6"
libc = "0.2.21"
log = "0.3"
lru_time_cache = "0.5"
indexmap = "1.0"
quick-error = "1.1"
rust-extra = "0.0.13"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"

[target.'cfg(unix)'.dependencies]
libc-extra = "0.0.16"
stderr-logging = "0.0.1"
syscall-alt = "0.0.14"

[target.'cfg(any(all(any(target_os = "android", target_os = "linux"), any(target_arch = "aarch64", target_arch = "arm", target_arch = "powerpc64", target_arch = "x86", target_arch = "x86_64")), all(target_os = "freebsd", target_arch = "x86_64")))'.dependencies]
dpdk = { path = "../dpdk", version = "0.0.3" }
