# This file is part of dpdk. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/dpdk/master/COPYRIGHT. No part of dpdk, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016-2017 The developers of dpdk. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/dpdk/master/COPYRIGHT.


[package]
name = "dpdk-unix"
description = "An internal crate to make it easier to iterate on unix requirements"
keywords = ["unix"]
categories = ["external-ffi-bindings", "hardware-support", "memory-management", "command-line-interface"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/dpdk"
repository = "https://github.com/lemonrock/dpdk.git"
exclude = ["*"]
include = ["README.md", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.3.0"

[dependencies]
errno = "0.1"
hashbrown = { version = "0.1", features = ["nightly", "serde"] }
libc = "^0.2"
likely = "0.1.0"
raw-cpuid = "^5.0"
rust-extra = "0.0.13"
serde = "1.0"
serde_derive = "1.0"

[target.'cfg(unix)'.dependencies]
libc-extra = "^0.3.2"
syscall-alt = "0.0.14"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
bitflags = "1.0"
likely = "0.1"
