# This file is part of dpdk. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/dpdk/master/COPYRIGHT. No part of dpdk, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016-2017 The developers of dpdk. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/dpdk/master/COPYRIGHT.


[package]
name = "dpdk"
description = "A wrapper around DPDK"
keywords = ["DPDK", "TLDK", "TCP", "UDP", "Networking"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/dpdk/blob/master/README.md"
homepage = "https://github.com/lemonrock/dpdk"
repository = "https://github.com/lemonrock/dpdk.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = true
version = "0.0.1"

[dependencies]
arrayvec = "0.3"
libc = "^0.2"
pointer = "0.0.1"
rust-extra = "0.0.13"
serde = "0.9"
serde_derive = "0.9"

[target.'cfg(unix)'.dependencies]
dpdk-ioctl = { path = "../dpdk-ioctl", version = "0.0.1" }
dpdk-unix = { path = "../dpdk-unix", version = "0.0.1" }
libc-extra = "0.0.14"
syscall-alt = "0.0.14"

[target.'cfg(any(all(any(target_os = "android", target_os = "linux"), any(target_arch = "aarch64", target_arch = "arm", target_arch = "powerpc64", target_arch = "x86", target_arch = "x86_64")), all(target_os = "freebsd", target_arch = "x86_64")))'.dependencies]
bitflags-associated-constants = "0.6.0"
const-cstr-fork = "^0.2"
dpdk-serde = { path = "../dpdk-serde", version = "0.0.1" }
dpdk-sys = { path = "../dpdk-sys", version = "0.0.2" }
log = "0.3"
quick-error = "1.1"
stderr-logging = "0.0.1"
